--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,12 +1,12 @@
 {% load cards super_buttons %}
 
 {% comment %} If the template is a list, show this, else hide it {% endcomment %}
-<section class="relative max-w-2xl mx-auto divide-y-2 divide-gray-300 dark:divide-martinique-100 lg:max-w-7xl">
+<section class="relative max-w-2xl mx-auto divide-y-2 divide-gray-300 dark:divide-jumbo-100 lg:max-w-7xl">
   <section>
-    <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 dark:text-martinique-100 sm:text-4xl">
+    <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 dark:text-jumbo-100 sm:text-4xl">
       {{ title }}
     </h2>
-    <p class="text-lg font-bold lg:col-span-2 dark:text-martinique-50 mt-3 sm:mt-4">
+    <p class="text-lg font-bold lg:col-span-2 dark:text-jumbo-50 mt-3 sm:mt-4">
       {{ description }}
     </p>
     {% comment %} https://tailwindui.com/components/marketing/sections/blog-sections Add top page superbuttons (edit if it's a list of posts in a category or tag, maybe user buttons as well) {% endcomment %}
