--- a/khoBlog/templates/authentication/includes/login_form.html
+++ b/khoBlog/templates/authentication/includes/login_form.html
@@ -29,12 +29,12 @@
   <div class="min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
       <img class="mx-auto h-12 w-auto" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" width="3rem" alt="RuthinkkTooBig" loading="lazy">
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-martinique-900">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-jumbo-900">
         Log in to your account
       </h2>
-      <p class="mt-2 text-center text-sm text-martinique-600">
+      <p class="mt-2 text-center text-sm text-jumbo-600">
       Don't have an account?
-      <a href="{% url 'accounts:signup' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow" class="font-medium text-indigo-600 hover:text-indigo-500 dark:text-martinique-200 dark:hover:text-martinique-300">Sign up</a>
+      <a href="{% url 'accounts:signup' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow" class="font-medium text-indigo-600 hover:text-indigo-500 dark:text-jumbo-200 dark:hover:text-jumbo-300">Sign up</a>
     </p>
     </div>
 
@@ -47,33 +47,33 @@
           </div>
 
           <div>
-            <label for="id_login" class="block text-sm font-medium text-martinique-700">
+            <label for="id_login" class="block text-sm font-medium text-jumbo-700">
               Login
             </label>
             <div class="mt-1">
-              {{ form.login|add_class:"appearance-none block w-full px-3 py-2 border border-martinique-300 rounded-md shadow-sm placeholder-martinique-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
+              {{ form.login|add_class:"appearance-none block w-full px-3 py-2 border border-jumbo-300 rounded-md shadow-sm placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
             </div>
           </div>
 
           <div>
-            <label for="id_password" class="block text-sm font-medium text-martinique-700">
+            <label for="id_password" class="block text-sm font-medium text-jumbo-700">
               Password
             </label>
             <div class="mt-1">
-              {{ form.password|add_class:"appearance-none block w-full px-3 py-2 border border-martinique-300 rounded-md shadow-sm placeholder-martinique-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
+              {{ form.password|add_class:"appearance-none block w-full px-3 py-2 border border-jumbo-300 rounded-md shadow-sm placeholder-jumbo-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" }}
             </div>
           </div>
 
           <div class="flex items-center justify-between">
             <div class="flex items-center">
-              {{ form.remember|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-martinique-300 rounded" }}
-              <label for="remember-me" class="ml-2 block text-sm text-martinique-900">
+              {{ form.remember|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-jumbo-300 rounded" }}
+              <label for="remember-me" class="ml-2 block text-sm text-jumbo-900">
                 Remember me
               </label>
             </div>
 
             <div class="text-sm">
-              <a href="{% url 'accounts:reset_password' %}" class="font-medium text-indigo-600 hover:text-indigo-500 dark:text-martinique-200 dark:hover:text-martinique-300">
+              <a href="{% url 'accounts:reset_password' %}" class="font-medium text-indigo-600 hover:text-indigo-500 dark:text-jumbo-200 dark:hover:text-jumbo-300">
                 Forgot your password?
               </a>
             </div>
@@ -89,10 +89,10 @@
         <div class="mt-6">
           <div class="relative">
             <div class="absolute inset-0 flex items-center">
-              <div class="w-full border-t border-martinique-300"></div>
+              <div class="w-full border-t border-jumbo-300"></div>
             </div>
             <div class="relative flex justify-center text-sm">
-              <span class="px-2 bg-white text-martinique-500">
+              <span class="px-2 bg-white text-jumbo-500">
                 Or continue with
               </span>
             </div>
@@ -100,7 +100,7 @@
 
           <div class="mt-6 grid grid-cols-3 gap-3">
             <div>
-              <a href="{% provider_login_url 'google' %}" class="w-full inline-flex justify-center py-2 px-4 border border-martinique-300 rounded-md shadow-sm bg-white text-sm font-medium text-martinique-500 hover:bg-martinique-50">
+              <a href="{% provider_login_url 'google' %}" class="w-full inline-flex justify-center py-2 px-4 border border-jumbo-300 rounded-md shadow-sm bg-white text-sm font-medium text-jumbo-500 hover:bg-jumbo-50">
                 <span class="sr-only">Log in with Google</span>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
                   <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
@@ -109,7 +109,7 @@
             </div>
 
             <div>
-              <a href="{% provider_login_url 'discord' %}" class="w-full inline-flex justify-center py-2 px-4 border border-martinique-300 rounded-md shadow-sm bg-white text-sm font-medium text-martinique-500 hover:bg-martinique-50">
+              <a href="{% provider_login_url 'discord' %}" class="w-full inline-flex justify-center py-2 px-4 border border-jumbo-300 rounded-md shadow-sm bg-white text-sm font-medium text-jumbo-500 hover:bg-jumbo-50">
                 <span class="sr-only">Log in with Discord</span>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
                   <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
@@ -118,7 +118,7 @@
             </div>
 
             <div>
-              <a href="{% provider_login_url 'github' %}" class="w-full inline-flex justify-center py-2 px-4 border border-martinique-300 rounded-md shadow-sm bg-white text-sm font-medium text-martinique-500 hover:bg-martinique-50">
+              <a href="{% provider_login_url 'github' %}" class="w-full inline-flex justify-center py-2 px-4 border border-jumbo-300 rounded-md shadow-sm bg-white text-sm font-medium text-jumbo-500 hover:bg-jumbo-50">
                 <span class="sr-only">Log in with GitHub</span>
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
                   <path fill-rule="evenodd" d="M10 0C4.477 0 0 4.484 0 10.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.942.359.31.678.921.678 1.856 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0020 10.017C20 4.484 15.522 0 10 0z" clip-rule="evenodd"></path>
