--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -62,8 +62,8 @@
           <div class="xl:col-span-2 xl:pr-8">
             <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
               <div>
-                <h1 class="text-2xl font-bold text-martinique-900 dark:text-martinique-300">{{ page.title }}</h1>
-                <p class="mt-2 text-sm text-martinique-500">
+                <h1 class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ page.title }}</h1>
+                <p class="mt-2 text-sm text-jumbo-500">
                   Page <span class="font-bold">#{{ page.pk }}</span>
                 </p>
               </div>
