--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -20,17 +20,17 @@
   {% endif %}
   <section>
     <a href="{{ object.get_absolute_url }}" class="mt-2 block">
-      <p class="text-lg font-bold text-gray-900 dark:text-martinique-50">
+      <p class="text-lg font-bold text-gray-900 dark:text-jumbo-50">
         {{ object }}
       </p>
     </a>
-    <p class="text-sm dark:text-martinique-50">
+    <p class="text-sm dark:text-jumbo-50">
       {% comment %} {% endcomment %}
       <time datetime="{{ object.pub_date|date:"c" }}">
         {{ object.pub_date|date:"Y\-m\-d" }}
       </time>
     </p>
-    <p class="mt-3 text-base dark:text-martinique-50">
+    <p class="mt-3 text-base dark:text-jumbo-50">
       {{ object.description }}
     </p>
   </section>
