--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -1,7 +1,7 @@
 <h2 class="sr-only">Details</h2>
 <article class="space-y-5">
   <section class="flex items-center space-x-2">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-martinique-100" viewbox="0 0 20 20" fill="currentColor">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-jumbo-100" viewbox="0 0 20 20" fill="currentColor">
       <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"/>
       <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"/>
     </svg>
@@ -11,7 +11,7 @@
       {% elif object.is_scheduled %}
         <span class="text-orange-400 text-sm font-medium">Scheduled</span>
       {% else %}
-        <span class="text-gray-500 dark:text-martinique-50 text-sm font-medium">Published</span>
+        <span class="text-gray-500 dark:text-jumbo-50 text-sm font-medium">Published</span>
       {% endif %}
     {% elif not object.pub_date %}
       <span class="text-slate-500 dark:text-slate-300 text-sm font-medium">Draft</span>
@@ -20,55 +20,55 @@
     {% endif %}
   </section>
   <section class="flex items-center space-x-2">
-    <svg class="h-5 w-5 text-gray-400 dark:text-martinique-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
+    <svg class="h-5 w-5 text-gray-400 dark:text-jumbo-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
-    <span class="text-gray-900 dark:text-martinique-50 text-sm font-medium">Created on
+    <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">Created on
       {{ object.created_date|date:'D, d M Y H:i' }}</span>
   </section>
   <section class="flex items-center space-x-2">
-    <svg class="h-5 w-5 text-gray-400 dark:text-martinique-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
+    <svg class="h-5 w-5 text-gray-400 dark:text-jumbo-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
-    <span class="text-gray-900 dark:text-martinique-50 text-sm font-medium">Published on
+    <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">Published on
       {{ object.pub_date|date:'D, d M Y H:i' }}</span>
   </section>
   <section class="flex items-center space-x-2">
-    <svg class="h-5 w-5 text-gray-400 dark:text-martinique-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
+    <svg class="h-5 w-5 text-gray-400 dark:text-jumbo-100" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
-    <span class="text-gray-900 dark:text-martinique-50 text-sm font-medium">Updated on
+    <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">Updated on
       {{ object.mod_date|date:'D, d M Y H:i' }}</span>
   </section>
 </article>
 
-<article class="mt-6 border-t border-gray-200 dark:border-martinique-200 py-6 space-y-8">
+<article class="mt-6 border-t border-gray-200 dark:border-jumbo-200 py-6 space-y-8">
   <section>
-    <h2 class="text-sm font-medium text-gray-500 dark:text-martinique-100">Author</h2>
+    <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Author</h2>
     <ul role="list" class="mt-3 space-y-3">
       <li class="flex justify-start">
         <a href="{{ object.author.get_absolute_url }}" class="flex items-center space-x-3">
           <div class="flex-shrink-0">
             <img class="h-5 w-5 rounded-full" src="{{ object.author.profile_pic.url }}" alt="">
           </div>
-          <div class="text-sm font-medium text-gray-900 dark:text-martinique-50">{{ object.author }}</div>
+          <div class="text-sm font-medium text-gray-900 dark:text-jumbo-50">{{ object.author }}</div>
         </a>
       </li>
     </ul>
   </section>
 
   <section>
-    <h2 class="text-sm font-medium text-gray-500 dark:text-martinique-100">Tags</h2>
+    <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Tags</h2>
     <ul role="list" class="mt-2 leading-8">
       {% if not user.is_superuser %}
         {% for tag in object.get_tags %}
           {% spaceless %}
             <li class="inline">
-              <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-martinique-300 px-3 py-0.5">
+              <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-jumbo-300 px-3 py-0.5">
                 <div class="absolute flex-shrink-0 flex items-center justify-center">
                   <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}" aria-hidden="true"></span>
                 </div>
-                <div class="ml-3.5 text-sm font-medium text-gray-900 dark:text-martinique-50">{{ tag }}</div>
+                <div class="ml-3.5 text-sm font-medium text-gray-900 dark:text-jumbo-50">{{ tag }}</div>
               </a>
               <!-- space -->
             </li>
@@ -78,11 +78,11 @@
         {% for tag in object.get_admin_tags %}
           {% spaceless %}
             <li class="inline">
-              <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-gray-200 dark:border-martinique-200 px-3 py-0.5">
+              <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-gray-200 dark:border-jumbo-200 px-3 py-0.5">
                 <div class="absolute flex-shrink-0 flex items-center justify-center">
                   <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}" aria-hidden="true"></span>
                 </div>
-                <div class="ml-3.5 text-sm font-medium text-gray-900 dark:text-martinique-50">{{ tag }}</div>
+                <div class="ml-3.5 text-sm font-medium text-gray-900 dark:text-jumbo-50">{{ tag }}</div>
               </a>
               <!-- space -->
             </li>
@@ -93,14 +93,14 @@
   </section>
 
   <section>
-    <h2 class="text-sm font-medium text-gray-500 dark:text-martinique-100">Related content</h2>
+    <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Related content</h2>
     {% for e in similar_posts %}
       <ul role="list" class="mt-2 leading-8">
         {% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}
           {% spaceless %}
             <li class="inline">
-              <a href="{{ e.get_absolute_url }}" class="relative inline-flex items-center rounded-full border border-martinique-300 px-3 py-0.5">
-                <div class="text-sm font-medium text-gray-900 dark:text-martinique-50">{{ e }}</div>
+              <a href="{{ e.get_absolute_url }}" class="relative inline-flex items-center rounded-full border border-jumbo-300 px-3 py-0.5">
+                <div class="text-sm font-medium text-gray-900 dark:text-jumbo-50">{{ e }}</div>
               </a>
               <!-- space -->
             </li>
@@ -112,13 +112,13 @@
 
   {% if object.series %}
     <div>
-      <h2 class="text-sm font-medium text-gray-500 dark:text-martinique-100">Series</h2>
+      <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Series</h2>
       <dl class="mt-5 grid grid-cols-1 gap-5">
-        <div class="px-4 py-5 bg-white dark:bg-martinique-700 shadow rounded-lg overflow-hidden sm:p-6">
-          <dt class="text-sm font-medium text-gray-500 dark:text-martinique-100 truncate">
+        <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-lg overflow-hidden sm:p-6">
+          <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
             <a class="text-base" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series }}</a>
           </dt>
-          <dd class="mt-1 text-3xl font-semibold text-martinique-900 dark:text-martinique-50">
+          <dd class="mt-1 text-3xl font-semibold text-jumbo-900 dark:text-jumbo-50">
             {% if object.series.description %}
               {{ object.series.description }}
               -
@@ -128,8 +128,8 @@
           </dd>
         </div>
         {% for e in object.series.post_series.all %}
-          <div class="px-4 py-5 bg-white dark:bg-martinique-700 shadow rounded-lg overflow-hidden sm:p-6">
-            <dt class="text-sm font-medium text-gray-500 dark:text-martinique-100 truncate">
+          <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-lg overflow-hidden sm:p-6">
+            <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
               {% if not e.is_scheduled or context.user.is_superuser %}
                 <a href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}:
                   {{ e }}
@@ -158,7 +158,7 @@
                 </span>
               {% endif %}
             </dt>
-            <dd class="mt-1 font-semibold text-gray-900 dark:text-martinique-50">
+            <dd class="mt-1 font-semibold text-gray-900 dark:text-jumbo-50">
               {{ e.description }}
             </dd>
           </div>
@@ -168,22 +168,22 @@
   {% endif %}
 
   <div>
-    <h2 class="text-sm font-medium text-gray-500 dark:text-martinique-100">Stats</h2>
+    <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Stats</h2>
     <dl class="mt-5 grid grid-cols-1 gap-5">
-      <div class="px-4 py-5 bg-white dark:bg-martinique-700 shadow rounded-lg overflow-hidden sm:p-6">
-        <dt class="text-sm font-medium text-gray-500 dark:text-martinique-100 truncate">
+      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-lg overflow-hidden sm:p-6">
+        <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Seen
         </dt>
-        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-martinique-50">
+        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-jumbo-50">
           {{ object.clicks }}
           time{{ object.clicks|pluralize:'s' }}
         </dd>
       </div>
-      <div class="px-4 py-5 bg-white dark:bg-martinique-700 shadow rounded-lg overflow-hidden sm:p-6">
-        <dt class="text-sm font-medium text-gray-500 dark:text-martinique-100 truncate">
+      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-lg overflow-hidden sm:p-6">
+        <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Randomly chosen
         </dt>
-        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-martinique-50">
+        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-jumbo-50">
           {{ object.rnd_choice }}
           time{{ object.rnd_choice|pluralize:'s' }}
         </dd>
