--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -95,8 +95,8 @@
         <section class="xl:col-span-2 xl:pr-8">
           <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
             <section>
-              <h1 class="text-2xl font-bold text-martinique-900 dark:text-martinique-300">{{ project.title }}</h1>
-              <p class="mt-2 text-sm text-martinique-500">
+              <h1 class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ project.title }}</h1>
+              <p class="mt-2 text-sm text-jumbo-500">
                 Project <span class="font-bold">#{{ project.pk }}</span>
               </p>
             </section>
@@ -140,10 +140,10 @@
               <section class="max-w-2xl mx-auto">
                 <section class="relative">
                   <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                    <div class="w-full border-t border-martinique-300 dark:border-martinique-600"></div>
+                    <div class="w-full border-t border-jumbo-300 dark:border-jumbo-600"></div>
                   </div>
                   <div class="relative flex justify-center">
-                    <span class="px-3 bg-white dark:bg-martinique-600 text-lg font-medium text-martinique-900 dark:text-martinique-200">
+                    <span class="px-3 bg-white dark:bg-jumbo-600 text-lg font-medium text-jumbo-900 dark:text-jumbo-200">
                       {{ project.get_sub_projects.count }}
                       Sub Project{{ project.get_sub_projects.count|pluralize:'s' }}
                     </span>
