--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -61,20 +61,20 @@
         {% if is_paginated %}
           <section class="flex-1 flex justify-between md:hidden">
             {% if page_obj.has_previous %}
-              <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="relative inline-flex items-center px-4 py-2 border border-jumbo-300 text-sm font-medium rounded-md text-jumbo-700 bg-white hover:bg-jumbo-50">
+              <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="pagination_next_prev_buttons dark:hover:bg-jumbo-800">
                 Previous
               </a>
             {% else %}
-              <span class="relative inline-flex items-center px-4 py-2 border border-jumbo-300 text-sm font-medium rounded-md text-jumbo-700 bg-white hover:bg-jumbo-50 disabled:opacity-50" disabled>
+              <span class="pagination_next_prev_buttons disabled:opacity-50" disabled>
                 Previous
               </span>
             {% endif %}
             {% if page_obj.has_next %}
-              <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="ml-3 relative inline-flex items-center px-4 py-2 border border-jumbo-300 text-sm font-medium rounded-md text-jumbo-700 bg-white hover:bg-jumbo-50">
+              <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="pagination_next_prev_buttons ml-3 dark:hover:bg-jumbo-800">
                 Next
               </a>
             {% else %}
-              <span class="ml-3 relative inline-flex items-center px-4 py-2 border border-jumbo-300 text-sm font-medium rounded-md text-jumbo-700 bg-white hover:bg-jumbo-50 disabled:opacity-50" disabled>
+              <span class="pagination_next_prev_buttons ml-3 disabled:opacity-50" disabled>
                 Next
               </span>
             {% endif %}
@@ -106,9 +106,8 @@
             <section>
               <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
                 {% if page_obj.has_previous %}
-                  <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="previous_pagination_button">
+                  <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="previous_pagination_button dark:hover:bg-jumbo-800">
                     <span class="sr-only">Previous</span>
-                    <!-- Heroicon name: solid/chevron-left -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                       <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
                     </svg>
@@ -116,7 +115,6 @@
                 {% else %}
                   <button disabled class="previous_pagination_button">
                     <span class="sr-only">Previous</span>
-                    <!-- Heroicon name: solid/chevron-left -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                       <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
                     </svg>
@@ -126,16 +124,16 @@
                 {% get_proper_elided_page_range paginator page_obj.number as page_range %}
                 {% for i in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
                   {% if page_obj.number == i %}
-                    <span aria-current="page" class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+                    <span aria-current="page" class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium dark:bg-jumbo-700 dark:border-flamingo-100/50 dark:text-jumbo-50">
                       {{ i }}
                     </span>
                   {% else %}
                     {% if i == page_obj.paginator.ELLIPSIS %}
-                      <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">
+                      <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50">
                         {{ i }}
                       </span>
                     {% else %}
-                      <a href="{% relative_url i 'page' request.GET.urlencode %}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+                      <a href="{% relative_url i 'page' request.GET.urlencode %}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800">
                         {{ i }}
                       </a>
                     {% endif %}
@@ -143,7 +141,7 @@
                 {% endfor %}
 
                 {% if page_obj.has_next %}
-                  <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="next_pagination_button">
+                  <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="next_pagination_button dark:hover:bg-jumbo-800">
                     <span class="sr-only">Next</span>
                     <!-- Heroicon name: solid/chevron-right -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
