--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -8,7 +8,7 @@
     }
 
     .pagination_buttons {
-        @apply relative inline-flex items-center border border-gray-300 px-2 py-2 text-sm font-medium text-gray-500 disabled:cursor-not-allowed disabled:bg-slate-600;
+        @apply relative inline-flex items-center border border-gray-300 px-2 py-2 text-sm font-medium text-gray-500 disabled:cursor-not-allowed disabled:bg-slate-600 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50;
     }
 
     .next_pagination_button {
@@ -173,6 +173,10 @@
     }
 
     .next_prev_buttons {
-        @apply inline-flex items-center px-2.5 py-1.5 sm:px-3 sm:py-2 border border-transparent text-xs sm:text-sm leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+        @apply inline-flex items-center px-2.5 py-1.5 sm:px-3 sm:py-2 border border-transparent text-xs sm:text-sm leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800;
+    }
+
+    .pagination_next_prev_buttons {
+        @apply relative inline-flex items-center px-4 py-2 border border-jumbo-300 text-sm font-medium rounded-md text-jumbo-700 bg-white hover:bg-jumbo-50 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50;
     }
 }
