--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -128,7 +128,7 @@
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
-        <input type="checkbox" name="" id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
+        <input type="checkbox" name="" id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 bg-gray-200" />
         <label for="darkLightd" class="cursor-pointer sr-only"></label>
       </section>
 
