--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -20,7 +20,7 @@
     }
 
     .flyout_button {
-        @apply bg-white dark:bg-jumbo-900 rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 dark:hover:text-jumbo-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500;
+        @apply bg-white dark:bg-jumbo-900 rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 dark:hover:text-jumbo-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 text-gray-500;
     }
 
     .flyout_bottom_items {
@@ -44,7 +44,7 @@
     }
 
     .superbutton_base {
-        @apply relative inline-flex items-center py-2 border border-gray-300 bg-white dark:bg-jumbo-700 dark:border-jumbo-600 text-sm font-medium text-gray-700 dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500;
+        @apply relative inline-flex items-center py-2 border border-gray-300 bg-white dark:bg-jumbo-700 dark:border-jumbo-600 text-sm font-medium text-gray-700 dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 focus:border-indigo-500 dark:focus:border-flamingo-600/75;
     }
 
     .superbutton_main_action {
@@ -173,7 +173,7 @@
     }
 
     .next_prev_buttons {
-        @apply inline-flex items-center px-2.5 py-1.5 sm:px-3 sm:py-2 border border-transparent text-xs sm:text-sm leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800;
+        @apply inline-flex items-center px-2.5 py-1.5 sm:px-3 sm:py-2 border border-transparent text-xs sm:text-sm leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:focus:ring-flamingo-600/75 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800;
     }
 
     .pagination_next_prev_buttons {
