--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -70,6 +70,9 @@
           <a href="{% url 'blog:post_withdrawn_list' %}" class="flyout_bottom_items">
             <span>Withdrawn</span>
           </a>
+          <a href="{% url 'todo:task_list' %}" class="flyout_bottom_items">
+            <span>Todo</span>
+          </a>
         {% endif %}
       </div>
     </div>
