--- a/todo/templates/todo/create_task.html
+++ b/todo/templates/todo/create_task.html
@@ -1,19 +1,64 @@
 {% extends 'sub_base.html' %}
-{% load project_tags %}
+{% load project_tags widget_tweaks %}
 
 {% block content %}
-  <div class="card formcard">
-    <div class="card-body">
-      <form method="post" novalidate="novalidate">
-        <div class="text-danger">
-          {{ form.non_field_errors }}
+  <form class="space-b-8 divide-b divide-gray-200" method="post" novalidate="novalidate">
+    {% csrf_token %}
+    {{ form.non_field_errors }}
+    <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
+      <div>
+        <div>
+          <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-jumbo-400">{{ title }}</h3>
+          <p class="mt-1 max-w-2xl text-sm text-gray-500 dark:text-jumbo-100">This information will be displayed publicly so be careful what you share.</p>
         </div>
-
-        {% form form %}
-
-          <button type="submit" class="btn btn-primary">{{ title }}</button>
-        </form>
+        <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
+          <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
+            <label for="id_title" class="block text-sm font-medium text-gray-700 dark:text-jumbo-400 sm:mt-px sm:pt-2">{{ form.title.label }}</label>
+            <div class="mt-1 sm:mt-0 sm:col-span-2">
+              <div class="max-w-lg flex rounded-md shadow-sm">
+                <input type="text" name="title" id="title" autocomplete="title" class="flex-1 block w-full focus:ring-indigo-500 focus:border-indigo-500 min-w-0 rounded-md sm:text-sm border-gray-300">
+              </div>
+            </div>
+          </div>
+          <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
+            <label for="description" class="block text-sm font-medium text-gray-700 dark:text-jumbo-400 sm:mt-px sm:pt-2">{{ form.description.label }}</label>
+            <div class="mt-1 sm:mt-0 sm:col-span-2">
+              <textarea id="description" name="description" rows="3" class="max-w-lg shadow-sm block w-full focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border border-gray-300 rounded-md"></textarea>
+            </div>
+          </div>
+          <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
+            <div>
+              <div class="text-base font-medium text-gray-900 sm:text-sm sm:text-gray-700 dark:text-jumbo-400" id="label-email">{{ form.withdrawn.label }}</div>
+            </div>
+            <div class="mt-4 sm:mt-0 sm:col-span-2">
+              <div class="max-w-lg space-y-4">
+                <div class="relative flex items-start">
+                  <div class="flex items-center h-5">
+                    {{ form.withdrawn|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
+                  </div>
+                  <div class="ml-3 text-sm">
+                    <label for="id_withdrawn" class="font-medium text-gray-700 dark:text-jumbo-400">{{ form.withdrawn.label }}</label>
+                  </div>
+                </div>
+                <div class="relative flex items-start">
+                  <div class="flex items-center h-5">
+                    {{ form.complete|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
+                  </div>
+                  <div class="ml-3 text-sm">
+                    <label for="id_complete" class="font-medium text-gray-700 dark:text-jumbo-400">{{ form.complete.label }}</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-  {% endblock content %}
+    <div class="pt-5">
+      <div class="flex justify-end">
+        <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Cancel</button>
+        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Save</button>
+      </div>
+    </div>
+  </form>
+{% endblock content %}
