--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -136,8 +136,10 @@
       </section>
 
       <section class="px-4 sm:px-6 lg:px-8">
-        {% block content %}
-        {% endblock content %}
+        <section class="max-w-2xl xl:max-w-7xl mx-auto">
+          {% block content %}
+          {% endblock content %}
+        </section>
       </section>
     </main>
 
