--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,7 +1,7 @@
 {% load cards super_buttons %}
 
 {% comment %} If the template is a list, show this, else hide it {% endcomment %}
-<section class="relative max-w-2xl mx-auto divide-y-2 divide-gray-300 dark:divide-jumbo-100 lg:max-w-7xl">
+<section class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-100">
   <section>
     <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 dark:text-jumbo-100 sm:text-4xl">
       {{ title }}
