--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,66 +27,64 @@
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
     {% render_cards post %}
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
-    <div class="py-8 xl:py-10">
-      <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 xl:max-w-5xl xl:grid xl:grid-cols-3">
-        <div class="xl:col-span-2 xl:pr-8 xl:border-r xl:border-gray-200">
-          <nav class="flex justify-between" role="group" aria-label="Previous / Next">
-            <a type="button" class="next_prev_buttons" href="{{ prev_post.get_absolute_url }}">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 sm:h-5 w-4 sm:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-              </svg>
+    <div class="xl:grid xl:grid-cols-3">
+      <div class="xl:col-span-2 xl:pr-8 xl:border-r xl:border-gray-200">
+        <nav class="flex justify-between" role="group" aria-label="Previous / Next">
+          <a type="button" class="next_prev_buttons" href="{{ prev_post.get_absolute_url }}">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 sm:h-5 w-4 sm:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+            </svg>
+            <!-- space -->
+            Previous
+          </a>
+          <a type="button" class="next_prev_buttons" href="{{ next_post.get_absolute_url }}">
+            Next
+            <!-- space -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 sm:h-5 w-4 sm:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+            </svg>
+          </a>
+        </nav>
+        <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
+          <div>
+            <h1 class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ object.title }}</h1>
+            <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
+              Post <span class="font-bold">#{{ object.pk }}</span> written by
               <!-- space -->
-              Previous
-            </a>
-            <a type="button" class="next_prev_buttons" href="{{ next_post.get_absolute_url }}">
-              Next
+              <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.author }}</a>
               <!-- space -->
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 sm:h-5 w-4 sm:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-              </svg>
-            </a>
-          </nav>
-          <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
-            <div>
-              <h1 class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ object.title }}</h1>
-              <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
-                Post <span class="font-bold">#{{ object.pk }}</span> written by
-                <!-- space -->
-                <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.author }}</a>
-                <!-- space -->
-                in
-                <!-- space -->
-                {% if object.categories %}
-                  {% if object.get_featured_cat %}
-                    <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.featured_cat_title }}</a>
-                  {% else %}
-                    <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.categories.first }}</a>
-                  {% endif %}
+              in
+              <!-- space -->
+              {% if object.categories %}
+                {% if object.get_featured_cat %}
+                  <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.featured_cat_title }}</a>
+                {% else %}
+                  <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900 dark:text-jumbo-50">{{ object.categories.first }}</a>
                 {% endif %}
-              </p>
-            </div>
-            {% if user.is_superuser %}
-              {% twsb object %}
-            {% endif %}
+              {% endif %}
+            </p>
           </div>
-          <div class="py-3 xl:pt-6 xl:pb-0">
-            <h2 class="sr-only">Content</h2>
-            {% if post.image %}
-              <img src="{{ post.image.url }}" class="w-full" alt="Post image" loading="lazy"/>
-            {% endif %}
-
-            <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
-              {{ post.body|formatted_markdown|safe }}
-            </div>
-          </div>
-          <aside class="mt-8 xl:hidden">
-            {% include 'tailwind/post_aside.html' %}
-          </aside>
+          {% if user.is_superuser %}
+            {% twsb object %}
+          {% endif %}
         </div>
-        <aside class="hidden xl:block xl:pl-8">
+        <div class="py-3 xl:pt-6 xl:pb-0">
+          <h2 class="sr-only">Content</h2>
+          {% if post.image %}
+            <img src="{{ post.image.url }}" class="w-full" alt="Post image" loading="lazy"/>
+          {% endif %}
+
+          <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+            {{ post.body|formatted_markdown|safe }}
+          </div>
+        </div>
+        <aside class="mt-8 xl:hidden">
           {% include 'tailwind/post_aside.html' %}
         </aside>
       </div>
+      <aside class="hidden xl:block xl:pl-8">
+        {% include 'tailwind/post_aside.html' %}
+      </aside>
     </div>
   {% endif %}
 
