--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -36,7 +36,7 @@
     }
 
     .profile_tab.profile_active_tab {
-        @apply border-pink-500 text-gray-900 dark:text-jumbo-300;
+        @apply border-pink-500 dark:border-flamingo-500 text-gray-900 dark:text-jumbo-300;
     }
 
     .profile_tab:not(.profile_active_tab) {
