--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,4 +1,4 @@
-{% load static socialaccount analytical google_analytics_gtag tailwind_tags %}
+{% load static socialaccount analytical google_analytics_gtag tailwind_tags theme_buttons %}
 {% comment %} {% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
@@ -128,13 +128,7 @@
     {% include 'tailwind/menu.html' %}
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
-      <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
-        <button id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-9 w-9 rounded-full cursor-pointer border-2 border-transparent dark:border-transparent hover:border-transparent dark:hover:border-transparent dark:border-x-white border-y-jumbo-900 rotate-12 ease-in-out duration-150 hover:scale-125">
-          <span class="rounded-l-full inline-flex h-6 w-3 translate-x-1 translate-y-1 bg-white dark:bg-jumbo-900"></span>
-          <span class="rounded-r-full inline-flex h-6 w-3 translate-x-1 translate-y-1 dark:bg-white bg-jumbo-900"></span>
-        </button>
-        <label for="darkLightd" class="cursor-pointer sr-only"></label>
-      </section>
+      {% theme_button "darkLightd" %}
 
       <section class="px-4 sm:px-6 lg:px-8">
         <section class="max-w-2xl xl:max-w-7xl mx-auto">
